# flappy-bevy

./: .gitignore  Cargo.toml  TODO.md  index.html  justfile
src/: assets.rs  camera.rs  debug.rs  game.rs  main.rs  menu.rs  window.rs
