[package]
name = "flappy-bevy"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
verbose_logs = []

[dependencies]
# For better sprite animations.
benimator = "4"
# To help with loading assets.
bevy_asset_loader = { version = "0.19", features = ["2d"] }
# For in-game and debug UI.
bevy_egui = { version = "0.24", default-features = false }
# Generic debug UI to inspect entities and components.
# TODO: Put behind a feature flag?
bevy-inspector-egui = { version = "0.22", default-features = false, features = ["highlight_changes"] }
# For playing sound effects and music.
#bevy_kira_audio = { version = "0.13", default-features = false, features = ["wav"] }
# 2D physics. Mostly used for collision detection.
bevy_rapier2d = "0.23"
# For quick, simple random number generation.
fastrand = "2"
# Noise for camera shake.
noise = { version = "0.8", default-features = false }

# For saving window state.
serde = "1"
ron = "0.8"

# Base engine dependency.
[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    # Multi-threading
    "multi-threaded",

    # Windowing
    "bevy_winit",
    "x11",

    # Assets
    "bevy_asset",
    "png",

    # Rendering
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "webgl2",
]

# Explicitly specify bevy_window to add serialize feature.
[dependencies.bevy_window]
version = "0.12"
features = ["serialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Show panics in the browser console: https://bevy-cheatbook.github.io/platforms/wasm/panic-console.html
console_error_panic_hook = "0.1"
# TODO: Enable "webgl2" feature on bevy.

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# When doing trunk builds, uncomment these lines to get smaller wasm binaries.
# [profile.release]
# opt-level = "s"

# TODO: If/when trunk supports calling custom cargo profiles, we can use this instead of the above hack.
# Release profile optimizing for smaller binary size. Primarily for wasm builds.
[profile.release-small]
inherits = "release"
opt-level = "s"
